--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@ const responses = [
   {id:"ask", triggers:["ask"], reply:"You can ask me about my comedy stuff, upcoming gigs, or how to contact me. Or click one of the options on the sidebar!"},
   {id:"whatIsThis", triggers:["what is this","what are you","who made you","is this real","what is this site", "ai", "is this ai"], reply:"This is FEARGPT, a chatbot that answers questions about Fearghas Kelly. AI is really good, actually, and ISN'T destroying our brain power, water supply or democracy, so ask me something!"},
   {id:"thanks", triggers:["thanks","thank you","cheers"], reply:"Oh no, thank YOU!!!"},
+  {id:"update", triggers:["111222333444"], reply:"22:53 28 December 2025"},
   {id:"test", triggers:["test","testing"], reply:"I've done quite a bit of that making this thing, don't you worry."},
   {id:"goodbye", triggers:["bye","goodbye","see you","later"], reply:"Catch ye."},
   {id:"piss", triggers:["piss"], reply:"No thanks, I'm full."},
