--- a/index.html
+++ b/index.html
@@ -50,10 +50,11 @@ const responses = [
   {id:"ask", triggers:["ask"], reply:"You can ask me about my comedy stuff, upcoming gigs, or how to contact me. Or click one of the options on the sidebar!"},
   {id:"whatIsThis", triggers:["what is this","what are you","who made you","is this real","what is this site", "ai", "is this ai"], reply:"This is FEARGPT, a chatbot that answers questions about Fearghas Kelly. AI is really good, actually, and ISN'T destroying our brain power, water supply or democracy, so ask me something!"},
   {id:"thanks", triggers:["thanks","thank you","cheers"], reply:"Oh no, thank YOU!!!"},
-  {id:"update", triggers:["111222333444"], reply:"22:55 28 December 2025"},
+  {id:"update", triggers:["111222333444"], reply:"23:00 28 December 2025"},
   {id:"test", triggers:["test","testing"], reply:"I've done quite a bit of that making this thing, don't you worry."},
   {id:"goodbye", triggers:["bye","goodbye","see you","later"], reply:"Catch ye."},
   {id:"piss", triggers:["piss"], reply:"No thanks, I'm full."},
+  {id:"joke", triggers:["joke"], reply:"Not here, you'll have to come see me. Please follow me on the socials for all upcoming gigs: <a href="https://www.facebook.com/FearghasKellyComedy/" target="_blank">Facebook</a>, <a href="https://www.instagram.com/fearghaskelly/" target="_blank">Instagram</a>, <a href="https://twitter.com/fearghaskelly" target="_blank">Twitter</a>, or <a href="http://threads.com/fearghaskelly" target="_blank">Threads</a>."},
   {id:"Seinfeld", triggers:["seinfeld", "seinfeldd"], reply:"What is the deal with that?"},
   {id:"song", triggers:["song","play","music"], reply:`<a href="https://youtu.be/dDYE5eu9POA?si=Iur4ggxxRn0Xyr7O" target="_blank">Oh you want a song, do you?</a>`},
   {id:"drinks", triggers:["cocktail","drink","drnikipoo","drinkypoo"], reply:`<a href="https://youtu.be/BdwPmIqZUpI?si=NN3dPJ2H-soxfJIL" target="_blank">If you want a cocktail, I've got you covered.</a>`},
