--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@ if (
 ) {
   return `
     I've generated an NFT of Fearghas for you. Remember this NFT belongs to you and cannot be copy-and-pasted by anyone else.<br><br>
-    <img src="fearghas-stand-portrait.jpg" 
+    <img src="fearghas-stand-portrait.jpeg" 
          alt="Fearghas Kelly"
          style="max-width:100%; border-radius:12px; margin-top:12px;">
   `;
